Moved edge device scripts into appropriate directory

--- a/edge/scripts/src/edge-device/components/deployment.json.j2
+++ b/edge/scripts/src/edge-device/components/deployment.json.j2
@@ -17,6 +17,11 @@
     "aws.greengrass.clientdevices.mqtt.Moquette":
     {
       "componentVersion": "2.3.2"    
+    },
+
+    "aws.greengrass.clientdevices.IPDetector":
+    {
+      "componentVersion": "2.1.5"
     }
 
   }
