Nicer config structure

--- a/edge/scripts/src/components/deployment.json.j2
+++ b/edge/scripts/src/components/deployment.json.j2
@@ -3,7 +3,7 @@
   "components": {
 
     "aws.greengrass.Cli": {
-      "componentVersion": "{{ greengrass_installer.version }}"
+      "componentVersion": "{{ greengrass.install.version }}"
     },
 
     "aws.greengrass.clientdevices.Auth":
