--- a/edge/scripts/src/components/list.sh.j2
+++ b/edge/scripts/src/components/list.sh.j2
@@ -1,1 +1,1 @@
-sudo {{ greengrass_installer.rootpath }}/bin/greengrass-cli component list
+sudo {{ greengrass.install.rootpath }}/bin/greengrass-cli component list
