--- a/edge/scripts/src/greengrass/config.yml.j2
+++ b/edge/scripts/src/greengrass/config.yml.j2
@@ -1,16 +1,16 @@
 ---
 system:
-  certificateFilePath: "{{ greengrass_installer.rootpath }}/device.pem.crt"
-  privateKeyPath: "{{ greengrass_installer.rootpath }}/private.pem.key"
-  rootCaPath: "{{ greengrass_installer.rootpath }}/AmazonRootCA1.pem"
-  rootpath: "{{ greengrass_installer.rootpath }}"
-  thingName: "{{ terraform.core_iot_thing_name }}"
+  certificateFilePath: "{{ greengrass.install.rootpath }}/device.pem.crt"
+  privateKeyPath: "{{ greengrass.install.rootpath }}/private.pem.key"
+  rootCaPath: "{{ greengrass.install.rootpath }}/AmazonRootCA1.pem"
+  rootpath: "{{ greengrass.install.rootpath }}"
+  thingName: "{{ greengrass.core.core_iot_thing_name }}"
 services:
   aws.greengrass.Nucleus:
     componentType: "NUCLEUS"
-    version: "{{ greengrass_installer.version }}"
+    version: "{{ greengrass.install.version }}"
     configuration:
-      awsRegion: "{{ terraform.region }}"
+      awsRegion: "{{ aws.region }}"
       iotRoleAlias: "GreengrassCoreTokenExchangeRoleAlias"
       iotDataEndpoint: "{{ iotDataEndpoint }}"
       iotCredEndpoint: "{{ iotCredEndpoint }}"
