--- a/edge/scripts/src/greengrass/config.yml.j2
+++ b/edge/scripts/src/greengrass/config.yml.j2
@@ -4,7 +4,7 @@ system:
   privateKeyPath: "{{ greengrass.install.rootpath }}/private.pem.key"
   rootCaPath: "{{ greengrass.install.rootpath }}/AmazonRootCA1.pem"
   rootpath: "{{ greengrass.install.rootpath }}"
-  thingName: "{{ greengrass.core.core_iot_thing_name }}"
+  thingName: "{{ greengrass.core.iot_thing_name }}"
 services:
   aws.greengrass.Nucleus:
     componentType: "NUCLEUS"
