--- a/edge/scripts/src/greengrass/setup.sh.j2
+++ b/edge/scripts/src/greengrass/setup.sh.j2
@@ -11,9 +11,9 @@ cp private.pem.key $DOWNLOAD_DIR
 
 cd $DOWNLOAD_DIR
 
-curl -s https://d2s8p88vqu9w66.cloudfront.net/releases/greengrass-{{ greengrass.install.version }}.zip > greengrass-{{ greengrass.install.version }}.zip
+curl -s https://d2s8p88vqu9w66.cloudfront.net/releases/greengrass-{{ greengrass_install.version }}.zip > greengrass-{{ greengrass_install.version }}.zip
 
-unzip greengrass-{{ greengrass.install.version }}.zip -d GreengrassInstaller && rm greengrass-{{ greengrass.install.version }}.zip
+unzip greengrass-{{ greengrass_install.version }}.zip -d GreengrassInstaller && rm greengrass-{{ greengrass_install.version }}.zip
 java -jar ./GreengrassInstaller/lib/Greengrass.jar --version
 
 mv config.yml ./GreengrassInstaller/config.yaml
@@ -26,13 +26,13 @@ if ! getent group ggc_group >/dev/null 2>&1; then
   sudo groupadd --system ggc_group
 fi
 
-sudo -E java -Droot="{{ greengrass.install.rootpath }}" -Dlog.store=FILE \
+sudo -E java -Droot="{{ greengrass_install.rootpath }}" -Dlog.store=FILE \
   -jar ./GreengrassInstaller/lib/Greengrass.jar \
   --init-config ./GreengrassInstaller/config.yaml \
   --component-default-user ggc_user:ggc_group \
   --setup-system-service true
 
-sudo mv device.pem.crt {{ greengrass.install.rootpath }}/device.pem.crt
-sudo mv private.pem.key {{ greengrass.install.rootpath }}/private.pem.key
+sudo mv device.pem.crt {{ greengrass_install.rootpath }}/device.pem.crt
+sudo mv private.pem.key {{ greengrass_install.rootpath }}/private.pem.key
 curl -s https://www.amazontrust.com/repository/AmazonRootCA1.pem > AmazonRootCA1.pem 
-sudo mv AmazonRootCA1.pem {{ greengrass.install.rootpath }}/AmazonRootCA1.pem
+sudo mv AmazonRootCA1.pem {{ greengrass_install.rootpath }}/AmazonRootCA1.pem
