--- a/edge/scripts/src/greengrass/uninstall.sh.j2
+++ b/edge/scripts/src/greengrass/uninstall.sh.j2
@@ -3,4 +3,4 @@ sudo systemctl disable greengrass.service
 sudo rm /etc/systemd/system/greengrass.service
 sudo systemctl daemon-reload && sudo systemctl reset-failed
 
-sudo rm -r "{{ greengrass.install.rootpath }}"
+sudo rm -r "{{ greengrass_install.rootpath }}"
