--- a/sln/edge/infra/scripts/src/components/list.sh.j2
+++ b/sln/edge/infra/scripts/src/components/list.sh.j2
@@ -1,1 +1,1 @@
-sudo {{ greengrass_install.rootpath }}/bin/greengrass-cli component list
+sudo "{{ greengrass_install.rootpath }}/bin/greengrass-cli" component list
